# nidaqmx-python

./: .env  .env.sample  .gitignore  .gitmodules  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  NILICENSE  README.rst  SECURITY.md  cspell-dict.txt  cspell-ignore-words.txt  cspell-mako-keywords.txt  cspell.json  installDAQmx.py  mypy_output.txt  poetry.toml  pyproject.toml  pyrightconfig.json  python_packages.txt  requirements.txt  requirements_dev.in  requirements_dev.txt  requirements_test.in  requirements_test.txt  setup.py  tox.ini
.config/: cspell.json
.config/cspell/: daqmx-api-elements.txt  mako-keywords.txt  project-software-terms.txt  sphinx-directives.txt
.cspell/: cspell-changelog-words.txt  cspell-codegen-dict.txt  cspell-contributing-words.txt  cspell-daqmx-abbreviations.txt  cspell-daqmx-api-elements.txt  cspell-dict.txt  cspell-project-software-terms.txt  cspell-real-words.txt  cspell-sphinx-directives.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  renovate.json  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md  tech_debt.md  user_story.md
.github/workflows/: CI.yml  PR.yml  build.yml  check_workflows.yml  generate_docs.yml  github_actions_aws_win_py32.yml  github_actions_aws_win_py64.yml  publish.yml  report_test_results.yml  run_system_tests.yml  run_system_tests_py32.yml  run_system_tests_py64.yml  run_unit_tests.yml  sync_github_issues_to_azdo.yml
debian/: changelog  control  rules
docs/: Makefile  README.rst  ai_channel.rst  ai_channel_collection.rst  ao_channel.rst  ao_channel_collection.rst  arm_start_trigger.rst  channel.rst  channel_collection.rst  ci_channel.rst  ci_channel_collection.rst  co_channel.rst  co_channel_collection.rst  collections.rst  conf.py  constants.rst  device.rst  device_collection.rst  di_channel.rst  di_channel_collection.rst  do_channel.rst  do_channel_collection.rst  errors.rst  expiration_state.rst  expiration_states_collection.rst  export_signals.rst  grpc_session_options.rst  handshake_trigger.rst  in_stream.rst  index.rst  make.bat  out_stream.rst  pause_trigger.rst  persisted_channel.rst  persisted_channel_collection.rst  persisted_scale.rst  persisted_scale_collection.rst  persisted_task.rst  persisted_task_collection.rst  physical_channel.rst  (+17 more)
examples/: ai_voltage_hw_timed.py  ai_voltage_sw_timed.py  ao_voltage_hw_timed.py  ao_voltage_sw_timed.py  channel_properties.py  ci_count_edges.py  ci_hw_count_edges.py  ci_hw_pulse_freq.py  ci_pulse_freq.py  co_hw_pulse_time.py  di_hw_timed.py  di_sw_timed.py  do_hw_timed.py  event_unregistration_crash.ini  event_unregistration_crash.py  every_n_samples_event.py  nidaqmx - time tased synchronization.py  nidaqmx_warnings.py  playrec.py  pwr_hw_timed.py  pwr_hw_timed_stream.py  pwr_sw_timed.py  reregister_event.py  system_properties.py
examples/analog_in/: TestData.tdms  TestData.tdms_index  ai_multi_task_pxie_ref_clk.py  ai_raw.py  ai_temperature_signal_read.py  ai_voltage_acq_ext_clk.py  ai_voltage_acq_int_clk.py  ai_voltage_cont_acq.py  ai_voltage_signal_read.py  ai_voltage_sw_timed.py  ai_voltage_waveform_cont_acq.py  ai_voltage_waveform_cont_acq_with_event.py  ai_voltage_waveform_finite_acq.py  calculated_power_acq_int_clk.py  cont_calculated_power_acq_int_clk.py  cont_thrmcpl_samples_int_clk.py  cont_voltage_acq_int_clk.py  cont_voltage_acq_int_clk_dig_start.py  cont_voltage_acq_int_clk_dig_start_retrig.py  cont_voltage_acq_int_clk_every_n_samples_event.py  thrmcpl_sample.py  voltage_acq_int_clk.py  voltage_acq_int_clk_dig_ref.py  voltage_acq_int_clk_dig_start_ref.py  voltage_acq_int_clk_plot_data.py  voltage_acq_int_clk_plot_wfm.py  voltage_acq_int_clk_tdms_logging.py  voltage_acq_int_clk_wfm.py  voltage_sample.py
examples/analog_out/: analog_out_helper.py  ao_voltage_cont_gen.py  ao_voltage_gen_ext_clk.py  ao_voltage_gen_int_clk.py  ao_voltage_hw_timed.py  ao_voltage_sw_timed.py  cont_gen_voltage_wfm_int_clk.py  cont_gen_voltage_wfm_int_clk_every_n_samples_event.py  cont_gen_voltage_wfm_int_clk_non_regen.py  gen_voltage_sample.py  gen_voltage_wfm_int_clk.py  voltage_update.py
examples/counter_in/: ci_count_edges.py  ci_count_edges_cont.py  ci_count_edges_ext_clk.py  ci_pulse_freq.py  ci_pulse_freq_cont.py  ci_pulse_freq_implicit_timing.py  cnt_dig_buff_cont_ext_clk.py  cnt_dig_event.py  read_freq.py  (+5 more)
nidaqmx/: __init__.py  _grpc_stub_interpreter.py  _lib.py  _library_interpreter.py  constants.py  error_codes.py  errors.py  grpc_session_options.py  nidaqmx.proto  nidaqmx_pb2.py  nidaqmx_pb2_grpc.py  nidevice.proto  nidevice_pb2.py  scale.py  session.proto  session_pb2.py  stream_readers.py  stream_writers.py  task.py  types.py  utils.py
nidaqmx_examples/: __init__.py  ai_multi_task_pxie_ref_clk.py  ai_raw.py  ai_voltage_sw_timed.py  ao_voltage_hw_timed.py  ao_voltage_sw_timed.py  channel_properties.py  ci_count_edges.py  ci_pulse_freq.py  co_pulse_time.py  di_sw_timed.py  do_sw_timed.py  nidaqmx_warnings.py  playrec.py  pwr_hw_timed.py  pwr_hw_timed_stream.py  pwr_sw_timed.py  system_properties.py
scripts/: update_project_keywords.py
tests/: __init__.py  _event_utils.py  _grpc_utils.py  conftest.py  helpers.py  test_buffer_property.py  test_channel_creation.py  test_channel_properties.py  test_channels.py  test_container_operations.py  test_device_properties.py  test_events.py  test_export_signals.py  test_helpers.py  test_invalid_reads.py  test_invalid_writes.py  test_multi_threading.py  test_persisted_channel_properties.py  test_persisted_scale_property.py  test_persisted_task_properties.py  test_physical_channel_property.py  test_power_up_states.py  test_properties.py  test_read_exceptions.py  test_read_write.py  test_resource_warnings.py  test_scale_properties.py  test_stream_analog_readers_writers.py  test_stream_counter_readers_writers.py  test_stream_digital_readers_writers.py  test_stream_power_readers.py  test_system_collections.py  test_task.py  test_teds.py  test_timing_properties.py  test_trigger_properties.py  test_triggers.py  test_utils.py  test_watchdog.py  test_write_exceptions.py
(+582 files in other folders)
